<?xml version="1.0"?>
<package>
  <name>joint_mapping</name>
  <version>0.1.2</version>
  <description>The distributed_mapping package</description>

  <maintainer email="vibhav.ganesh@gmail.com">Vibhav Ganesh</maintainer>
  <license>none</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libnabo</build_depend>
  <build_depend>gtsam</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dense_mapping</build_depend>
  <build_depend>asio_udp_device</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>libnabo</run_depend>
  <run_depend>gtsam</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>asio_udp_device</run_depend>
  <run_depend>dense_mapping</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>

</package>
